// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Default 1`] = `
<div
  class="wrapper"
>
  <div
    class="centered"
  >
    <div
      class="wrapper"
    >
      <div
        class="centered"
      >
        <button
          class="button"
          style="color: rgb(68, 68, 68); border-color: #444;"
        >
          Please X!
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card Multiple 1`] = `
<div>
  <div
    class="root"
    style="transform: translate(0px, 0px);"
  >
    <div
      class="card"
      style="transform: translate(48px, 240px); background-color: rgb(253, 249, 155); border-color: #f9f116;"
    >
      <ul
        class="list"
      >
        <li
          class="item"
        >
          
    とんこつラーメン
  
        </li>
        <li
          class="item"
        >
          
    油そば野菜油増し増しスペシャル
  
        </li>
        <li
          class="item"
        >
          
    うどん
  
        </li>
      </ul>
       
      <textarea
        class="input input"
        placeholder="Type something here..."
        style="resize: none; overflow: hidden; height: 16px;"
      />
    </div>
     
    <!---->
  </div>
  <div
    class="root"
    style="transform: translate(0px, 0px);"
  >
    <div
      class="card"
      style="transform: translate(600px, 360px); background-color: rgb(255, 166, 166); border-color: #f39393;"
    >
      <h2
        class="headline"
      >
        BACK STREET BOY
      </h2>
       
      <textarea
        class="input input"
        placeholder="Type something here..."
        style="resize: none; overflow: hidden; height: 16px;"
      />
    </div>
     
    <!---->
  </div>
  <div
    class="root"
    style="transform: translate(0px, 0px);"
  >
    <div
      class="card"
      style="transform: translate(600px, 120px); background-color: rgb(156, 232, 232); border-color: #8ee8e8;"
    >
      <div
        class="text"
      >
        ようやくの思いで笹原を這い出すと向うに大きな池がある。吾輩は池の前に坐ってどうしたらよかろうと考えて見た。別にこれという 分別 （ ふんべつ ） も出ない。
      </div>
       
      <textarea
        class="input input"
        placeholder="Type something here..."
        style="resize: none; overflow: hidden; height: 16px;"
      />
    </div>
     
    <!---->
  </div>
  <div
    class="root"
    style="transform: translate(0px, 0px);"
  >
    <div
      class="card"
      style="transform: translate(480px, 240px);"
    >
      <div
        class="text"
      >
        適当に遊んで暮らす毎日であります
      </div>
       
      <textarea
        class="input input"
        placeholder="Type something here..."
        style="resize: none; overflow: hidden; height: 16px;"
      />
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots Centered Default 1`] = `
<div
  class="wrapper"
>
  <div
    class="centered"
  >
    I’m centered
  </div>
</div>
`;

exports[`Storyshots Input Default 1`] = `
<div
  class="wrapper"
>
  <div
    class="centered"
  >
    <div
      class="wrapper"
    >
      <div
        class="centered"
      >
        <div
          style="width: 300px;"
        >
          <textarea
            class="input"
            placeholder="Type something here..."
            style="resize: none; overflow: hidden; height: 16px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
